Fixed footer layout issue. Fixed convert-svg.js loading issue. Implemented ES5 instead of ES6.

--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -440,6 +440,9 @@ p:last-child {
 body {
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-weight: 400;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 input {
